# KnowledgeGraphMultiModelML

./: .gitignore  README.md
kg-mmml/: .gitattributes  .gitignore  DEVELOPER_GUIDE.md  LICENSE  Makefile  SECURITY.md  pyproject.toml
kg-mmml/.github/: PULL_REQUEST_TEMPLATE.md
kg-mmml/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
kg-mmml/.github/workflows/: ci.yml  release.yml
kg-mmml/archive/configs/: system_hybrid.yaml
kg-mmml/configs/: experiment_baseline.yaml  experiment_joint.yaml  experiment_kge.yaml  experiment_kge_enhanced.yaml
kg-mmml/datasets/sec_edgar/: DATA_CHOICE.md  README.md  ciks.txt  tickers.txt
kg-mmml/docs/: Architecture.md  DOCUMENTATION_STANDARDS.md  DOCUMENT_INDEX.md  Glossary.md
kg-mmml/notebooks/: 01_data_audit.ipynb  02_baseline_runs.ipynb  03_results_figures.ipynb
kg-mmml/scripts/: assemble_final_thesis.py  compare_baseline_vs_joint.py  compare_comprehensive.py  compute_srs_stability.py  convert_kg_to_facts.py  generate_figure_5_1.py  generate_figure_5_2.py  generate_figure_5_3.py  generate_figure_5_4.py  generate_figure_5_5.py  m10_statistical_validation.py  m10_test_single_seed.py  m7_generate_report.py  m7_test_taxonomy_off.py  m7_test_unit_noise.py  m8_analytical_scale.py  m8_generate_report.py  m8_test_faiss_parity.py  m8_test_scale.py  m8_test_two_hop.py  m9_error_analysis.py  m9_generate_figures.py  run_m10_all.py  run_m7_all.py  run_m8_all.py
kg-mmml/scripts/visualization/: plot_joint_comparison.py  (+1 more)
kg-mmml/tests/: test_autotaxonomy.py  test_kg_build.py  test_latency.py  test_srs_metrics.py
(+36 files in other folders)
